--- a/application.yml
+++ b/application.yml
@@ -6,3 +6,13 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
   instance:
      hostname: localhost
+
+microservice:
+	payment-service:
+		endpoints:
+			endpoint:
+				uri: http://paymentservice/payment/doPayment
+	order-service :
+    endpoints:
+      endpoint:
+        uri: http://orderservice/order/bookorder     
